test/mlir/stack_bad_case_2.mlir.stderr
test/mlir/stack_bad_case_2.mlir:5:8: error: 'colgm.stack' op missing 'target_shape' attribute
  %0 = colgm.stack(%a) : tensor<2x4xi64> -> tensor<2x4xi64>
       ^
test/mlir/stack_bad_case_2.mlir:5:8: note: see current operation: %0 = "colgm.stack"(%arg0) : (tensor<2x4xi64>) -> tensor<2x4xi64>
